# ProjectAPI

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2024_05_09_1958-09a21129dd42_init.py
app/api/auth/: handlers.py  helpers.py
app/api/consumable/: handlers.py
app/api/consumable_category/: handlers.py
app/core/: config.py  database.py  utils.py
app/models/: consumable.py  user.py
